# django-spaserve

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
example/: README.md  manage.py
example/frontend/: index.html  package-lock.json  package.json  vite.config.js
example/frontend/src/: App.jsx
example/project/: settings.py  urls.py
src/django_spaserve/: __init__.py  apps.py  checks.py  config.py  files.py  handlers.py  navigation.py  urls.py  views.py
tests/: conftest.py  settings.py  test_caching.py  test_checks.py  test_handler404.py  test_multi_mount.py  test_navigation.py  test_security.py  test_serve_spa.py  urls_empty.py
